--- a/phant/login/pageLogin.html
+++ b/phant/login/pageLogin.html
@@ -3,7 +3,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <link rel="icon" type="image/png" href="../logo.png">
+        <link rel="icon" type="image/png" href="../logoBackground.jpg">
         <link rel="stylesheet" href="style.css">
     </head>
     <body class="container">
@@ -31,4 +31,5 @@
     </body>
 
 </html>
+
 
